--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "application/db_repo"]
 	path = application/db_repo
-	url = https://github.com/legoly/m3-database
+	url = git@github.com:legoly/m3-database.git
