--- a/Pipfile
+++ b/Pipfile
@@ -55,6 +55,8 @@ Unidecode = "==1.0.22"
 Werkzeug = "==0.14.1"
 gunicorn = "*"
 gevent = "*"
+flower = "*"
+celery-redbeat = "*"
 
 [dev-packages]
 
