--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,3 +73,14 @@ services:
     volumes:
       - ./application:/srv/application
     command: celery -A application.wsgi.celery worker --loglevel=info --concurrency=1
+
+  monitor_remote:
+      build:
+        context: .
+        dockerfile: Dockerfile-dev
+      environment:
+      - REDIS_HOST=redis://redis-cluster-v2-dev.3ymjnp.0001.use1.cache.amazonaws.com:6379/1
+      command: celery flower -A application.wsgi.celery --port=5555 --broker=redis://redis-cluster-v2-dev.3ymjnp.0001.use1.cache.amazonaws.com:6379/1
+      ports:
+      - "5555:5555"
+
