explicitly set the version of pipenv

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -10,7 +10,7 @@ COPY Pipfile.lock .
 
 RUN apk update --no-cache \
     && apk add --no-cache $BUILD_REQUIREMENTS $REQUIREMENTS \
-    && pip3 install pipenv \
+    && pip3 install pipenv==2018.7.1 \
     && pipenv install --system --deploy \
     && apk del $BUILD_REQUIREMENTS
 
