--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       - redis
     environment:
       - DEBUG=1
+      - SCRAPER_PRODUCTS_LIMIT=200
       - FLASK_APP=application/web
       - FLASK_ENV=development
       - FLASK_RUN_PORT=8080
