M3-289: update product summarization; added spacy package and it's dependencies

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,6 +1,6 @@
 FROM python:3.6-alpine
 ENV BUILD_REQUIREMENTS "git gcc musl-dev libxml2-dev libxslt-dev libffi-dev"
-ENV REQUIREMENTS "bash make libxml2 libxslt postgresql-dev postgresql-client"
+ENV REQUIREMENTS "bash make libxml2 libxslt postgresql-dev postgresql-client g++ python3-dev"
 ENV SCRAPER_PRODUCTS_LIMIT "0"
 
 RUN mkdir -p /srv
@@ -13,6 +13,7 @@ RUN apk update --no-cache \
     && apk add --no-cache $BUILD_REQUIREMENTS $REQUIREMENTS \
     && pip3 install pipenv==2018.7.1 \
     && pipenv install --system --deploy \
+    && python3 -m spacy download en_core_web_sm \
     && apk del $BUILD_REQUIREMENTS
 
 COPY . .
