--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
       - redis
     environment:
       - DEBUG=1
-      - SCRAPER_PAGES_LIMIT=100
+      - SCRAPER_PAGES_LIMIT=1000
       - FLASK_APP=application/web
       - FLASK_ENV=development
       - FLASK_RUN_PORT=8080
