M3-263: add thewinelibrary.com full scraper; add incremental scraper skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,4 @@ dev_data/
 *.pyc
 *.swp
 *.orig
-application/spiders/winelibrary.txt
-application/spiders/klwines.txt
-application/spiders/wine_com.txt
+application/spiders/*.txt
