--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ flask-caching = "*"
 flask-sqlalchemy = "*"
 funcy = "*"
 "psycopg2" = "*"
-redis = "*"
+redis = "==2.10.6"
 scrapy = "*"
 unidecode = "*"
 gunicorn = "*"
@@ -18,6 +18,7 @@ requests = "*"
 celery-redbeat = "*"
 sqlalchemy = "*"
 scrapy-proxies = "*"
+memory-profiler = "*"
 
 [dev-packages]
 
