--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ services:
       - FLASK_RUN_PORT=8080
     volumes:
       - ./application:/srv/application
-    command: celery -A application.wsgi.celery worker --loglevel=info --concurrency=1
+    command: celery -A application.wsgi.celery worker --loglevel=info --concurrency=1 -Q scraping
 
   monitor_remote:
       build:
