--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,9 @@ celery-redbeat = "*"
 sqlalchemy = "*"
 scrapy-proxies = "*"
 flower = "*"
+scipy = "==0.19.0"
+scikit-learn = "==0.18.1"
+numpy = "==1.13.0"
 
 [dev-packages]
 
