M3-723: remove DomainDictionary caching

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,8 @@ joblib = "==0.11"
 numpy = "*"
 scipy = "*"
 scikit-learn = "*"
+python-levenshtein = "==0.12.0"
+fuzzywuzzy = "*"
 
 [dev-packages]
 
